# blackbox-cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  conan_install.sh  conanfile.txt  run.sh
ansible/: dev.yml  docker.yml
ansible/roles/blackbox/tasks/: main.yaml
ansible/roles/blackbox_systemd/tasks/: main.yaml
example/: blackbox_foxglove_sample.json  example.cpp
inc/blackbox/: bb_blackbox.hpp  bb_logger.hpp  bb_node.hpp  bb_record.hpp  bb_time.hpp  blackbox.hpp
proto/: CMakeLists.txt
proto/proto/simpleproto/: MultiArray.pb.cc  MultiArray.pb.h  SimpleString.pb.cc
proto/simpleproto/: MultiArray.proto  SimpleString.proto
src/: bb_blackbox.cpp  bb_blackbox.hpp  bb_file.cpp  bb_file.hpp  bb_logger.cpp  bb_logger.hpp  bb_node.hpp  bb_record.hpp  blackbox.hpp
